--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -91,7 +91,7 @@
                 android:id="@+id/submit_application"
                 android:layout_width="165dp"
                 android:layout_height="40dp"
-                android:text="@string/submit_application"
+                android:text="@string/submit_request"
                 android:textColor="@color/white"
                 android:background="@drawable/request_button_shape"
                 android:backgroundTint="@color/agate_gray"
@@ -99,7 +99,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/request_button"
-                app:layout_constraintVertical_bias="0.9" />
+                app:layout_constraintVertical_bias="0.9"
+                android:onClick="Submit_request_clicked"
+                />
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
